# pilka-back-2023

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cr.yml  pr_develop.yml  pr_hotfix.yml  pr_master.yml  pr_release.yml
src/: manage.py
src/api/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/api/users/migrations/: 0001_initial.py  0002_remove_users_google_token_alter_users_email_and_more.py
src/pilka/: asgi.py  settings.py  urls.py  wsgi.py
