[tool.poetry]
name = "pilka"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.6"
firebase-admin = "^6.1.0"
python-dotenv = "^1.0.0"
google-auth = "^2.20.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
